core/domain/src/main/java/com/example/core/domain/util/error/RootError.kt
package com.example.core.domain.util.error

/**
 * This is the parent of every error types
 * */
interface RootError